ErrorLogs/grammars/ErrorLogParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ErrorLog.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class ErrorLogParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, NULL=2, DASHES=3, DOT=4, COMMA=5, AMP=6, TICK=7, DASH=8, STAR=9, 
		BANG=10, GT=11, LT=12, SINGLE_QUOTE=13, DOUBLE_QUOTE=14, BACK_SLASH=15, 
		SLASH=16, SEMI=17, QUESTION=18, PIPE=19, AT_SIGN=20, PERCENT=21, DOLLAR=22, 
		L_PAREN=23, R_PAREN=24, L_BRACKET=25, R_BRACKET=26, L_BRACE=27, R_BRACE=28, 
		COLON=29, EQUAL=30, NUMBER=31, MONTH=32, AM_PM=33, EXCEPTION_TYPE_LABEL=34, 
		ERROR_LABEL=35, STACK_TRACE_LABEL=36, INNNER_EXCEPTION_LABEL=37, IDENTIFIER=38, 
		EOL=39, WS=40;
	public const int
		RULE_logfile = 0, RULE_line = 1, RULE_logline = 2, RULE_datetime = 3, 
		RULE_day = 4, RULE_year = 5, RULE_hour = 6, RULE_minute = 7, RULE_skip_to_exception_type = 8, 
		RULE_skip_to_error_label = 9, RULE_exception_type = 10, RULE_error_and_stacktrace = 11, 
		RULE_error_message = 12, RULE_stack_trace = 13, RULE_method_signature = 14, 
		RULE_class_name = 15, RULE_method_name = 16, RULE_parameter_list = 17, 
		RULE_type = 18;
	public static readonly string[] ruleNames = {
		"logfile", "line", "logline", "datetime", "day", "year", "hour", "minute", 
		"skip_to_exception_type", "skip_to_error_label", "exception_type", "error_and_stacktrace", 
		"error_message", "stack_trace", "method_signature", "class_name", "method_name", 
		"parameter_list", "type"
	};

	private static readonly string[] _LiteralNames = {
		null, "'at'", "'NULL'", "'----------------------'", "'.'", "','", "'&'", 
		"'`'", "'-'", "'*'", "'!'", "'>'", "'<'", "'''", "'\"'", "'\\'", "'/'", 
		"';'", "'?'", "'|'", "'@'", "'%'", "'$'", "'('", "')'", "'['", "']'", 
		"'{'", "'}'", "':'", "'='", null, null, null, "'Exception Type:'", "'Error:'", 
		"'Stack Trace:'", "'*** Inner Exception ***'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, "NULL", "DASHES", "DOT", "COMMA", "AMP", "TICK", "DASH", "STAR", 
		"BANG", "GT", "LT", "SINGLE_QUOTE", "DOUBLE_QUOTE", "BACK_SLASH", "SLASH", 
		"SEMI", "QUESTION", "PIPE", "AT_SIGN", "PERCENT", "DOLLAR", "L_PAREN", 
		"R_PAREN", "L_BRACKET", "R_BRACKET", "L_BRACE", "R_BRACE", "COLON", "EQUAL", 
		"NUMBER", "MONTH", "AM_PM", "EXCEPTION_TYPE_LABEL", "ERROR_LABEL", "STACK_TRACE_LABEL", 
		"INNNER_EXCEPTION_LABEL", "IDENTIFIER", "EOL", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ErrorLog.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ErrorLogParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ErrorLogParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ErrorLogParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class LogfileContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(ErrorLogParser.Eof, 0); }
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public LogfileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_logfile; } }
		public override void EnterRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.EnterLogfile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.ExitLogfile(this);
		}
	}

	[RuleVersion(0)]
	public LogfileContext logfile() {
		LogfileContext _localctx = new LogfileContext(Context, State);
		EnterRule(_localctx, 0, RULE_logfile);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 41;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==NULL || _la==DASHES) {
				{
				{
				State = 38; line();
				}
				}
				State = 43;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 44; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public ITerminalNode NULL() { return GetToken(ErrorLogParser.NULL, 0); }
		public LoglineContext logline() {
			return GetRuleContext<LoglineContext>(0);
		}
		public ITerminalNode EOL() { return GetToken(ErrorLogParser.EOL, 0); }
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override void EnterRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NULL:
				{
				State = 46; Match(NULL);
				}
				break;
			case DASHES:
				{
				State = 47; logline();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 51;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==EOL) {
				{
				State = 50; Match(EOL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LoglineContext : ParserRuleContext {
		public ITerminalNode DASHES() { return GetToken(ErrorLogParser.DASHES, 0); }
		public DatetimeContext datetime() {
			return GetRuleContext<DatetimeContext>(0);
		}
		public Skip_to_exception_typeContext skip_to_exception_type() {
			return GetRuleContext<Skip_to_exception_typeContext>(0);
		}
		public ITerminalNode EXCEPTION_TYPE_LABEL() { return GetToken(ErrorLogParser.EXCEPTION_TYPE_LABEL, 0); }
		public Exception_typeContext exception_type() {
			return GetRuleContext<Exception_typeContext>(0);
		}
		public Skip_to_error_labelContext skip_to_error_label() {
			return GetRuleContext<Skip_to_error_labelContext>(0);
		}
		public ITerminalNode ERROR_LABEL() { return GetToken(ErrorLogParser.ERROR_LABEL, 0); }
		public Error_and_stacktraceContext error_and_stacktrace() {
			return GetRuleContext<Error_and_stacktraceContext>(0);
		}
		public LoglineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_logline; } }
		public override void EnterRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.EnterLogline(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.ExitLogline(this);
		}
	}

	[RuleVersion(0)]
	public LoglineContext logline() {
		LoglineContext _localctx = new LoglineContext(Context, State);
		EnterRule(_localctx, 4, RULE_logline);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53; Match(DASHES);
			State = 54; datetime();
			State = 55; skip_to_exception_type();
			State = 56; Match(EXCEPTION_TYPE_LABEL);
			State = 57; exception_type();
			State = 58; skip_to_error_label();
			State = 59; Match(ERROR_LABEL);
			State = 60; error_and_stacktrace();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DatetimeContext : ParserRuleContext {
		public ITerminalNode MONTH() { return GetToken(ErrorLogParser.MONTH, 0); }
		public DayContext day() {
			return GetRuleContext<DayContext>(0);
		}
		public YearContext year() {
			return GetRuleContext<YearContext>(0);
		}
		public HourContext hour() {
			return GetRuleContext<HourContext>(0);
		}
		public ITerminalNode COLON() { return GetToken(ErrorLogParser.COLON, 0); }
		public MinuteContext minute() {
			return GetRuleContext<MinuteContext>(0);
		}
		public ITerminalNode AM_PM() { return GetToken(ErrorLogParser.AM_PM, 0); }
		public DatetimeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_datetime; } }
		public override void EnterRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.EnterDatetime(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.ExitDatetime(this);
		}
	}

	[RuleVersion(0)]
	public DatetimeContext datetime() {
		DatetimeContext _localctx = new DatetimeContext(Context, State);
		EnterRule(_localctx, 6, RULE_datetime);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62; Match(MONTH);
			State = 63; day();
			State = 64; year();
			State = 65; hour();
			State = 66; Match(COLON);
			State = 67; minute();
			State = 68; Match(AM_PM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DayContext : ParserRuleContext {
		public ITerminalNode NUMBER() { return GetToken(ErrorLogParser.NUMBER, 0); }
		public DayContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_day; } }
		public override void EnterRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.EnterDay(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.ExitDay(this);
		}
	}

	[RuleVersion(0)]
	public DayContext day() {
		DayContext _localctx = new DayContext(Context, State);
		EnterRule(_localctx, 8, RULE_day);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70; Match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class YearContext : ParserRuleContext {
		public ITerminalNode NUMBER() { return GetToken(ErrorLogParser.NUMBER, 0); }
		public YearContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_year; } }
		public override void EnterRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.EnterYear(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.ExitYear(this);
		}
	}

	[RuleVersion(0)]
	public YearContext year() {
		YearContext _localctx = new YearContext(Context, State);
		EnterRule(_localctx, 10, RULE_year);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72; Match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HourContext : ParserRuleContext {
		public ITerminalNode NUMBER() { return GetToken(ErrorLogParser.NUMBER, 0); }
		public HourContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_hour; } }
		public override void EnterRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.EnterHour(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.ExitHour(this);
		}
	}

	[RuleVersion(0)]
	public HourContext hour() {
		HourContext _localctx = new HourContext(Context, State);
		EnterRule(_localctx, 12, RULE_hour);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74; Match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MinuteContext : ParserRuleContext {
		public ITerminalNode NUMBER() { return GetToken(ErrorLogParser.NUMBER, 0); }
		public MinuteContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_minute; } }
		public override void EnterRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.EnterMinute(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.ExitMinute(this);
		}
	}

	[RuleVersion(0)]
	public MinuteContext minute() {
		MinuteContext _localctx = new MinuteContext(Context, State);
		EnterRule(_localctx, 14, RULE_minute);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76; Match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Skip_to_exception_typeContext : ParserRuleContext {
		public ITerminalNode[] EXCEPTION_TYPE_LABEL() { return GetTokens(ErrorLogParser.EXCEPTION_TYPE_LABEL); }
		public ITerminalNode EXCEPTION_TYPE_LABEL(int i) {
			return GetToken(ErrorLogParser.EXCEPTION_TYPE_LABEL, i);
		}
		public Skip_to_exception_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_skip_to_exception_type; } }
		public override void EnterRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.EnterSkip_to_exception_type(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.ExitSkip_to_exception_type(this);
		}
	}

	[RuleVersion(0)]
	public Skip_to_exception_typeContext skip_to_exception_type() {
		Skip_to_exception_typeContext _localctx = new Skip_to_exception_typeContext(Context, State);
		EnterRule(_localctx, 16, RULE_skip_to_exception_type);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			ErrorHandler.Sync(this);
			_alt = 1+1;
			do {
				switch (_alt) {
				case 1+1:
					{
					{
					State = 78;
					_la = TokenStream.LA(1);
					if ( _la <= 0 || (_la==EXCEPTION_TYPE_LABEL) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 81;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			} while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Skip_to_error_labelContext : ParserRuleContext {
		public ITerminalNode[] ERROR_LABEL() { return GetTokens(ErrorLogParser.ERROR_LABEL); }
		public ITerminalNode ERROR_LABEL(int i) {
			return GetToken(ErrorLogParser.ERROR_LABEL, i);
		}
		public Skip_to_error_labelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_skip_to_error_label; } }
		public override void EnterRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.EnterSkip_to_error_label(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.ExitSkip_to_error_label(this);
		}
	}

	[RuleVersion(0)]
	public Skip_to_error_labelContext skip_to_error_label() {
		Skip_to_error_labelContext _localctx = new Skip_to_error_labelContext(Context, State);
		EnterRule(_localctx, 18, RULE_skip_to_error_label);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			ErrorHandler.Sync(this);
			_alt = 1+1;
			do {
				switch (_alt) {
				case 1+1:
					{
					{
					State = 83;
					_la = TokenStream.LA(1);
					if ( _la <= 0 || (_la==ERROR_LABEL) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 86;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			} while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Exception_typeContext : ParserRuleContext {
		public Class_nameContext class_name() {
			return GetRuleContext<Class_nameContext>(0);
		}
		public Exception_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exception_type; } }
		public override void EnterRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.EnterException_type(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.ExitException_type(this);
		}
	}

	[RuleVersion(0)]
	public Exception_typeContext exception_type() {
		Exception_typeContext _localctx = new Exception_typeContext(Context, State);
		EnterRule(_localctx, 20, RULE_exception_type);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88; class_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Error_and_stacktraceContext : ParserRuleContext {
		public Error_messageContext error_message() {
			return GetRuleContext<Error_messageContext>(0);
		}
		public ITerminalNode STACK_TRACE_LABEL() { return GetToken(ErrorLogParser.STACK_TRACE_LABEL, 0); }
		public Stack_traceContext stack_trace() {
			return GetRuleContext<Stack_traceContext>(0);
		}
		public ITerminalNode[] INNNER_EXCEPTION_LABEL() { return GetTokens(ErrorLogParser.INNNER_EXCEPTION_LABEL); }
		public ITerminalNode INNNER_EXCEPTION_LABEL(int i) {
			return GetToken(ErrorLogParser.INNNER_EXCEPTION_LABEL, i);
		}
		public Error_and_stacktraceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_error_and_stacktrace; } }
		public override void EnterRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.EnterError_and_stacktrace(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.ExitError_and_stacktrace(this);
		}
	}

	[RuleVersion(0)]
	public Error_and_stacktraceContext error_and_stacktrace() {
		Error_and_stacktraceContext _localctx = new Error_and_stacktraceContext(Context, State);
		EnterRule(_localctx, 22, RULE_error_and_stacktrace);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 90; error_message();
			State = 91; Match(STACK_TRACE_LABEL);
			State = 92; stack_trace();
			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==INNNER_EXCEPTION_LABEL) {
				{
				{
				State = 93; Match(INNNER_EXCEPTION_LABEL);
				State = 95;
				ErrorHandler.Sync(this);
				_alt = 1+1;
				do {
					switch (_alt) {
					case 1+1:
						{
						{
						State = 94;
						MatchWildcard();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 97;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
				} while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
				}
				}
				State = 103;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Error_messageContext : ParserRuleContext {
		public ITerminalNode[] STACK_TRACE_LABEL() { return GetTokens(ErrorLogParser.STACK_TRACE_LABEL); }
		public ITerminalNode STACK_TRACE_LABEL(int i) {
			return GetToken(ErrorLogParser.STACK_TRACE_LABEL, i);
		}
		public Error_messageContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_error_message; } }
		public override void EnterRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.EnterError_message(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.ExitError_message(this);
		}
	}

	[RuleVersion(0)]
	public Error_messageContext error_message() {
		Error_messageContext _localctx = new Error_messageContext(Context, State);
		EnterRule(_localctx, 24, RULE_error_message);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 105;
			ErrorHandler.Sync(this);
			_alt = 1+1;
			do {
				switch (_alt) {
				case 1+1:
					{
					{
					State = 104;
					_la = TokenStream.LA(1);
					if ( _la <= 0 || (_la==STACK_TRACE_LABEL) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 107;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			} while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Stack_traceContext : ParserRuleContext {
		public Method_signatureContext[] method_signature() {
			return GetRuleContexts<Method_signatureContext>();
		}
		public Method_signatureContext method_signature(int i) {
			return GetRuleContext<Method_signatureContext>(i);
		}
		public Stack_traceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stack_trace; } }
		public override void EnterRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.EnterStack_trace(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.ExitStack_trace(this);
		}
	}

	[RuleVersion(0)]
	public Stack_traceContext stack_trace() {
		Stack_traceContext _localctx = new Stack_traceContext(Context, State);
		EnterRule(_localctx, 26, RULE_stack_trace);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 109; Match(T__0);
				State = 110; method_signature();
				}
				}
				State = 113;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Method_signatureContext : ParserRuleContext {
		public Class_nameContext class_name() {
			return GetRuleContext<Class_nameContext>(0);
		}
		public ITerminalNode DOT() { return GetToken(ErrorLogParser.DOT, 0); }
		public Method_nameContext method_name() {
			return GetRuleContext<Method_nameContext>(0);
		}
		public Parameter_listContext parameter_list() {
			return GetRuleContext<Parameter_listContext>(0);
		}
		public Method_signatureContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_method_signature; } }
		public override void EnterRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.EnterMethod_signature(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IErrorLogListener typedListener = listener as IErrorLogListener;
			if (typedListener != null) typedListener.ExitMethod_signature(this);
		}
	}
